--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
 	</parent>
 	<groupId>com.nuvy</groupId>
 	<artifactId>purchase</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
 	<name>purchase</name>
 	<description>This project contains API&apos;s for purchasing products</description>
 	<properties>
